--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,24 @@
-img{
-  width:30%;
+body {
+  background-color: teal;
+}
+.mainimg{
+  width:80%;
   height: auto;
 }
 .jsresult, .csharpresult, .rubyresult, .confusedresult {
   display:none;
+}
+
+.main h1 {
+  padding-bottom:10px;
+  border-bottom: solid 5px orange;
+  margin-bottom: 15px;
+}
+#formOne {
+  padding: 5px;
+  border-top:solid 5px orange;
+}
+
+.form-control {
+  margin-bottom: 50px;
 }
